--- a/Casus_Blok3_MensenTeller/Casus_Blok3_MensenTeller.csproj
+++ b/Casus_Blok3_MensenTeller/Casus_Blok3_MensenTeller.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Bedrijven\" />
+    <Folder Include="Vestigingen\" />
+  </ItemGroup>
+
 </Project>
