--- a/Mensenteller_B3/Mensenteller_B3.csproj
+++ b/Mensenteller_B3/Mensenteller_B3.csproj
@@ -58,8 +58,11 @@
     <Compile Include="Locaties\LocatieDAL.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sensors\EntreeSensors\EntreeSensor.cs" />
+    <Compile Include="Sensors\EntreeSensors\EntreeSensorDAL.cs" />
     <Compile Include="Sensors\Sensor.cs" />
-    <Compile Include="Sensors\SensorDAL.cs" />
+      <Compile Include="Sensors\DrukSensors\DrukSensor.cs" />
+    <Compile Include="Sensors\DrukSensors\DrukSensorDAL.cs" />
     <Compile Include="Simulation_DAL\DAL.cs" />
     <Compile Include="Zones\DALZone.cs" />
     <Compile Include="Zones\Zone.cs" />
