--- a/Mensenteller_B3/App.config
+++ b/Mensenteller_B3/App.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Mensenteller_B3.Properties.Settings.MensentellerConnectionString"
+            connectionString="Data Source=.;Initial Catalog=Mensenteller;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="Mensenteller_B3.Properties.Settings.SensorDataConnectionString"
+            connectionString="Data Source=.;Initial Catalog=SensorData;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
