--- a/Mensenteller_B3/Mensenteller_B3.csproj
+++ b/Mensenteller_B3/Mensenteller_B3.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bedrijven\Bedrijf DAL.cs" />
+    <Compile Include="Bedrijven\BedrijfDAL.cs" />
     <Compile Include="Bedrijven\Bedrijf.cs" />
     <Compile Include="Locaties\Locatie.cs" />
     <Compile Include="Locaties\LocatieDAL.cs" />
@@ -60,6 +60,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sensors\DrukSensors\DrukSensor.cs" />
     <Compile Include="Sensors\DrukSensors\DrukSensorDAL.cs" />
+    <Compile Include="Sensors\EntreeSensors\EntreeSensor.cs" />
+    <Compile Include="Sensors\EntreeSensors\EntreeSensorDAL.cs" />
     <Compile Include="Sensors\Sensor.cs" />
     <Compile Include="Simulation_DAL\DAL.cs" />
     <Compile Include="Zones\DALZone.cs" />
