--- a/Mensenteller_B3/Mensenteller_B3.csproj
+++ b/Mensenteller_B3/Mensenteller_B3.csproj
@@ -48,6 +48,12 @@
   <ItemGroup>
     <Compile Include="Bedrijven\BedrijfDAL.cs" />
     <Compile Include="Bedrijven\Bedrijf.cs" />
+    <Compile Include="CreateBedrijf.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateBedrijf.Designer.cs">
+      <DependentUpon>CreateBedrijf.cs</DependentUpon>
+    </Compile>
     <Compile Include="Locaties\Locatie.cs" />
     <Compile Include="Locaties\LocatieDAL.cs" />
     <Compile Include="Main.cs">
@@ -66,6 +72,9 @@
     <Compile Include="Simulation_DAL\DAL.cs" />
     <Compile Include="Zones\DALZone.cs" />
     <Compile Include="Zones\Zone.cs" />
+    <EmbeddedResource Include="Main.resx">
+      <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
