--- a/Mensenteller_B3/Mensenteller_B3.csproj
+++ b/Mensenteller_B3/Mensenteller_B3.csproj
@@ -56,6 +56,7 @@
     </Compile>
     <Compile Include="Locaties\Locatie.cs" />
     <Compile Include="Locaties\LocatieDAL.cs" />
+    <Compile Include="Logic\Statestieken.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
