--- a/Mensenteller_B3/Mensenteller_B3.csproj
+++ b/Mensenteller_B3/Mensenteller_B3.csproj
@@ -76,6 +76,16 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SensorDataDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SensorDataDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="SensorDataDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SensorDataDataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Sensors\DrukSensors\DrukSensor.cs" />
     <Compile Include="Sensors\DrukSensors\DrukSensorDAL.cs" />
     <Compile Include="Sensors\EntreeSensors\EntreeSensor.cs" />
@@ -131,6 +141,28 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="SensorDataDataSet.xsc">
+      <DependentUpon>SensorDataDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="SensorDataDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>SensorDataDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="SensorDataDataSet.xss">
+      <DependentUpon>SensorDataDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="SensorDataDataSet1.xsc">
+      <DependentUpon>SensorDataDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="SensorDataDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>SensorDataDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="SensorDataDataSet1.xss">
+      <DependentUpon>SensorDataDataSet1.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
