--- a/Mensenteller_B3/Mensenteller_B3.csproj
+++ b/Mensenteller_B3/Mensenteller_B3.csproj
@@ -79,6 +79,17 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MensentellerDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="MensentellerDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MensentellerDataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="ModifyBedrijf.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModifyBedrijf.Designer.cs">
+      <DependentUpon>ModifyBedrijf.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SensorDataDataSet.Designer.cs">
@@ -114,6 +125,9 @@
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ModifyBedrijf.resx">
+      <DependentUpon>ModifyBedrijf.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -147,6 +161,17 @@
     </None>
     <None Include="MensentellerDataSet.xss">
       <DependentUpon>MensentellerDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="MensentellerDataSet1.xsc">
+      <DependentUpon>MensentellerDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="MensentellerDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>MensentellerDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="MensentellerDataSet1.xss">
+      <DependentUpon>MensentellerDataSet1.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
