--- a/Mensenteller_B3/Mensenteller_B3.csproj
+++ b/Mensenteller_B3/Mensenteller_B3.csproj
@@ -132,6 +132,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MensentellerDataSet4.xsd</DependentUpon>
     </Compile>
+    <Compile Include="MensentellerDataSet5.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MensentellerDataSet5.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="MensentellerDataSet6.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MensentellerDataSet6.xsd</DependentUpon>
+    </Compile>
     <Compile Include="ModifyBedrijf.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -203,6 +213,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ModifyLocation.resx">
       <DependentUpon>ModifyLocation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModifySensor.resx">
+      <DependentUpon>ModifySensor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ModifyZones.resx">
       <DependentUpon>ModifyZones.cs</DependentUpon>
@@ -317,6 +330,28 @@
     </None>
     <None Include="MensentellerDataSet4.xss">
       <DependentUpon>MensentellerDataSet4.xsd</DependentUpon>
+    </None>
+    <None Include="MensentellerDataSet5.xsc">
+      <DependentUpon>MensentellerDataSet5.xsd</DependentUpon>
+    </None>
+    <None Include="MensentellerDataSet5.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>MensentellerDataSet5.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="MensentellerDataSet5.xss">
+      <DependentUpon>MensentellerDataSet5.xsd</DependentUpon>
+    </None>
+    <None Include="MensentellerDataSet6.xsc">
+      <DependentUpon>MensentellerDataSet6.xsd</DependentUpon>
+    </None>
+    <None Include="MensentellerDataSet6.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>MensentellerDataSet6.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="MensentellerDataSet6.xss">
+      <DependentUpon>MensentellerDataSet6.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
