--- a/Mensenteller_B3/Mensenteller_B3.csproj
+++ b/Mensenteller_B3/Mensenteller_B3.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -46,12 +46,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BedrijfView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="BedrijfView.Designer.cs">
-      <DependentUpon>BedrijfView.cs</DependentUpon>
-    </Compile>
     <Compile Include="Bedrijven\BedrijfDAL.cs" />
     <Compile Include="Bedrijven\Bedrijf.cs" />
     <Compile Include="CreateBedrijf.cs">
@@ -72,32 +66,11 @@
     <Compile Include="CreateModify.designer.cs">
       <DependentUpon>CreateModify.cs</DependentUpon>
     </Compile>
-    <Compile Include="CreateSensor.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="CreateSensor.Designer.cs">
-      <DependentUpon>CreateSensor.cs</DependentUpon>
-    </Compile>
     <Compile Include="CreateZones.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="CreateZones.Designer.cs">
       <DependentUpon>CreateZones.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DataSet_Bedrijven.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataSet_Bedrijven.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="DataSet_Bedrijven1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataSet_Bedrijven1.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="DataSet_bedrijvenview.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataSet_bedrijvenview.xsd</DependentUpon>
     </Compile>
     <Compile Include="DataSet_CreateBedrijven.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -114,34 +87,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataSet_Locaties1.xsd</DependentUpon>
     </Compile>
-    <Compile Include="DataSet_LocatiesView.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataSet_LocatiesView.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="DataSet_Sensor.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataSet_Sensor.xsd</DependentUpon>
-    </Compile>
     <Compile Include="DataSet_Zones.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DataSet_Zones.xsd</DependentUpon>
     </Compile>
-    <Compile Include="DataSet_Zones1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataSet_Zones1.xsd</DependentUpon>
-    </Compile>
     <Compile Include="Locaties\Locatie.cs" />
     <Compile Include="Locaties\LocatieDAL.cs" />
-    <Compile Include="LocatieView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="LocatieView.Designer.cs">
-      <DependentUpon>LocatieView.cs</DependentUpon>
-    </Compile>
     <Compile Include="Logic\Statestieken.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -169,34 +121,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MensentellerDataSet3.xsd</DependentUpon>
     </Compile>
-    <Compile Include="MensentellerDataSet4.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>MensentellerDataSet4.xsd</DependentUpon>
-    </Compile>
     <Compile Include="ModifyBedrijf.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ModifyBedrijf.Designer.cs">
       <DependentUpon>ModifyBedrijf.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ModifyLocation.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ModifyLocation.Designer.cs">
-      <DependentUpon>ModifyLocation.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ModifySensor.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ModifySensor.Designer.cs">
-      <DependentUpon>ModifySensor.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ModifyZones.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ModifyZones.Designer.cs">
-      <DependentUpon>ModifyZones.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -215,12 +144,6 @@
     <Compile Include="Sensors\EntreeSensors\EntreeSensor.cs" />
     <Compile Include="Sensors\EntreeSensors\EntreeSensorDAL.cs" />
     <Compile Include="Sensors\Sensor.cs" />
-    <Compile Include="Sensors\SensorDAL.cs" />
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SensorView.Designer.cs">
-      <DependentUpon>SensorView.cs</DependentUpon>
-    </Compile>
     <Compile Include="Simulation_DAL\DAL.cs" />
     <Compile Include="View.cs">
       <SubType>Form</SubType>
@@ -230,15 +153,6 @@
     </Compile>
     <Compile Include="Zones\DALZone.cs" />
     <Compile Include="Zones\Zone.cs" />
-    <Compile Include="ZoneView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ZoneView.Designer.cs">
-      <DependentUpon>ZoneView.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="BedrijfView.resx">
-      <DependentUpon>BedrijfView.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="CreateBedrijf.resx">
       <DependentUpon>CreateBedrijf.cs</DependentUpon>
     </EmbeddedResource>
@@ -248,26 +162,14 @@
     <EmbeddedResource Include="CreateModify.resx">
       <DependentUpon>CreateModify.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CreateSensor.resx">
-      <DependentUpon>CreateSensor.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="CreateZones.resx">
       <DependentUpon>CreateZones.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="LocatieView.resx">
-      <DependentUpon>LocatieView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ModifyBedrijf.resx">
       <DependentUpon>ModifyBedrijf.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ModifyLocation.resx">
-      <DependentUpon>ModifyLocation.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ModifyZones.resx">
-      <DependentUpon>ModifyZones.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -278,48 +180,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SensorView.resx">
-      <DependentUpon>SensorView.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="View.resx">
       <DependentUpon>View.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ZoneView.resx">
-      <DependentUpon>ZoneView.cs</DependentUpon>
-    </EmbeddedResource>
-    <None Include="DataSet_Bedrijven.xsc">
-      <DependentUpon>DataSet_Bedrijven.xsd</DependentUpon>
-    </None>
-    <None Include="DataSet_Bedrijven.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>DataSet_Bedrijven.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="DataSet_Bedrijven.xss">
-      <DependentUpon>DataSet_Bedrijven.xsd</DependentUpon>
-    </None>
-    <None Include="DataSet_Bedrijven1.xsc">
-      <DependentUpon>DataSet_Bedrijven1.xsd</DependentUpon>
-    </None>
-    <None Include="DataSet_Bedrijven1.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>DataSet_Bedrijven1.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="DataSet_Bedrijven1.xss">
-      <DependentUpon>DataSet_Bedrijven1.xsd</DependentUpon>
-    </None>
-    <None Include="DataSet_bedrijvenview.xsc">
-      <DependentUpon>DataSet_bedrijvenview.xsd</DependentUpon>
-    </None>
-    <None Include="DataSet_bedrijvenview.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>DataSet_bedrijvenview.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="DataSet_bedrijvenview.xss">
-      <DependentUpon>DataSet_bedrijvenview.xsd</DependentUpon>
-    </None>
     <None Include="DataSet_CreateBedrijven.xsc">
       <DependentUpon>DataSet_CreateBedrijven.xsd</DependentUpon>
     </None>
@@ -353,28 +216,6 @@
     <None Include="DataSet_Locaties1.xss">
       <DependentUpon>DataSet_Locaties1.xsd</DependentUpon>
     </None>
-    <None Include="DataSet_LocatiesView.xsc">
-      <DependentUpon>DataSet_LocatiesView.xsd</DependentUpon>
-    </None>
-    <None Include="DataSet_LocatiesView.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>DataSet_LocatiesView.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="DataSet_LocatiesView.xss">
-      <DependentUpon>DataSet_LocatiesView.xsd</DependentUpon>
-    </None>
-    <None Include="DataSet_Sensor.xsc">
-      <DependentUpon>DataSet_Sensor.xsd</DependentUpon>
-    </None>
-    <None Include="DataSet_Sensor.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>DataSet_Sensor.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="DataSet_Sensor.xss">
-      <DependentUpon>DataSet_Sensor.xsd</DependentUpon>
-    </None>
     <None Include="DataSet_Zones.xsc">
       <DependentUpon>DataSet_Zones.xsd</DependentUpon>
     </None>
@@ -385,17 +226,6 @@
     </None>
     <None Include="DataSet_Zones.xss">
       <DependentUpon>DataSet_Zones.xsd</DependentUpon>
-    </None>
-    <None Include="DataSet_Zones1.xsc">
-      <DependentUpon>DataSet_Zones1.xsd</DependentUpon>
-    </None>
-    <None Include="DataSet_Zones1.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>DataSet_Zones1.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="DataSet_Zones1.xss">
-      <DependentUpon>DataSet_Zones1.xsd</DependentUpon>
     </None>
     <None Include="MensentellerDataSet.xsc">
       <DependentUpon>MensentellerDataSet.xsd</DependentUpon>
@@ -440,17 +270,6 @@
     </None>
     <None Include="MensentellerDataSet3.xss">
       <DependentUpon>MensentellerDataSet3.xsd</DependentUpon>
-    </None>
-    <None Include="MensentellerDataSet4.xsc">
-      <DependentUpon>MensentellerDataSet4.xsd</DependentUpon>
-    </None>
-    <None Include="MensentellerDataSet4.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>MensentellerDataSet4.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="MensentellerDataSet4.xss">
-      <DependentUpon>MensentellerDataSet4.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
