--- a/Mensenteller_B3/Mensenteller_B3.csproj
+++ b/Mensenteller_B3/Mensenteller_B3.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -146,6 +146,24 @@
     </Compile>
     <Compile Include="ModifyBedrijf.Designer.cs">
       <DependentUpon>ModifyBedrijf.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModifyLocation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModifyLocation.Designer.cs">
+      <DependentUpon>ModifyLocation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModifySensor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModifySensor.Designer.cs">
+      <DependentUpon>ModifySensor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModifyZones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModifyZones.Designer.cs">
+      <DependentUpon>ModifyZones.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
