--- a/Mensenteller_B3/Mensenteller_B3.csproj
+++ b/Mensenteller_B3/Mensenteller_B3.csproj
@@ -81,6 +81,11 @@
     <Compile Include="DataSet_Bedrijven.Designer.cs" />
     <Compile Include="DataSet_Bedrijven1.Designer.cs" />
     <Compile Include="DataSet_bedrijvenview.Designer.cs" />
+    <Compile Include="DataSet_Bedrijvenview1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataSet_Bedrijvenview.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DataSet_CreateBedrijven.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -186,6 +191,12 @@
     <Compile Include="Sensors\EntreeSensors\EntreeSensorDAL.cs" />
     <Compile Include="Sensors\Sensor.cs" />
     <Compile Include="Sensors\SensorDAL.cs" />
+    <Compile Include="SensorView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SensorView.Designer.cs">
+      <DependentUpon>SensorView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Simulation_DAL\DAL.cs" />
     <Compile Include="View.cs">
       <SubType>Form</SubType>
@@ -255,6 +266,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SensorView.resx">
+      <DependentUpon>SensorView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View.resx">
       <DependentUpon>View.cs</DependentUpon>
     </EmbeddedResource>
@@ -267,6 +281,17 @@
     <EmbeddedResource Include="ViewZone.resx">
       <DependentUpon>ViewZone.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="DataSet_Bedrijvenview.xsc">
+      <DependentUpon>DataSet_Bedrijvenview.xsd</DependentUpon>
+    </None>
+    <None Include="DataSet_Bedrijvenview.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSet_Bedrijvenview1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DataSet_Bedrijvenview.xss">
+      <DependentUpon>DataSet_Bedrijvenview.xsd</DependentUpon>
+    </None>
     <None Include="DataSet_CreateBedrijven.xsc">
       <DependentUpon>DataSet_CreateBedrijven.xsd</DependentUpon>
     </None>
