--- a/Mensenteller_B3/Mensenteller_B3.csproj
+++ b/Mensenteller_B3/Mensenteller_B3.csproj
@@ -107,6 +107,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataSet_Locaties1.xsd</DependentUpon>
     </Compile>
+    <Compile Include="DataSet_Locaties123.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataSet_Locaties123.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DataSet_LocatiesView.Designer.cs" />
     <Compile Include="DataSet_Sensor.Designer.cs" />
     <Compile Include="DataSet_Zones.Designer.cs">
@@ -333,6 +338,17 @@
     </None>
     <None Include="DataSet_Locaties1.xss">
       <DependentUpon>DataSet_Locaties1.xsd</DependentUpon>
+    </None>
+    <None Include="DataSet_Locaties123.xsc">
+      <DependentUpon>DataSet_Locaties123.xsd</DependentUpon>
+    </None>
+    <None Include="DataSet_Locaties123.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSet_Locaties123.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DataSet_Locaties123.xss">
+      <DependentUpon>DataSet_Locaties123.xsd</DependentUpon>
     </None>
     <None Include="DataSet_Zones.xsc">
       <DependentUpon>DataSet_Zones.xsd</DependentUpon>
